--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link rel="stylesheet" href="/style.css">
-    <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 </head>
 <body>
@@ -21,16 +21,16 @@
     {% include 'footer.njk' %}
 
     <script>
-        if (window.netlifyIdentity) {
-                window.netlifyIdentity.on("init", user => {
-        if (!user) {
-                window.netlifyIdentity.on("login", () => {
-            document.location.href = "/admin/";
-                });
-            }
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
         });
-    }
-    </script>
+      }
+    });
+  }
+</script>
 
 </body>
 </html>
